# EuXFEL-Lattice

./: .gitignore  404.html  BC2_TDS.txt  BEAM_B2D.txt  README.md  generate_files_and_check_optics.ipynb  index.html  pyproject.toml  t3.py  tox.toml  x83.txt
AUTHORS/: index.html
Astra_gun_simulation/10M_LMesh512/: generator.in  rfgun.in
Astra_gun_simulation/250pC_phi42/: Astra  generator  radial_smear.m  rfgun.in
Astra_gun_simulation_250pC_42/: generator.in  rfgun.Cathode.001
api/: index.html
beam_files/: check_result.ipynb  check_track_optics.py  compare_parrays.py  compare_parrays_all.py  show_parrays.py
beam_files/tws/: tws_section_A1.npz  tws_section_AH1.npz  tws_section_LH.npz
conversion/: index.html
docs-site/: mkdocs.yml
docs-site/docs/: AUTHORS.md  conversion.md  index.md  model-details.md  optics.md
lattices/: bolko_optics.py  high_energy_res_optics.py
lattices-deprecated/: bolko_optics.py  high_energy_res_optics.py
lattices-deprecated/LL2ocelot/: temp_SA3_converter.py  temp_cl_converter.py  temp_tl2.py
lattices/longlist_2024_07_04/: b1d.py  (+28 more)
layout/: index.html
model-details/: index.html
optics/: index.html
s2e/: index.html
s2e_scripts/: Optics.txt  bolko_optics.py  high_energy_res_optics.py  inj_hires_optics_track.py  injector_hires_optics.py  r34-calculation-kickers-to-bpms copy.ipynb  r34-calculation-kickers-to-bpms.ipynb  r34-calculation-kickers-to-bpms_18022025.ipynb  s2e_up_to_B2D.py  s2e_up_to_I1D_screen.py  s2e_up_to_SA1.py  s2e_up_to_SA2.py  s2e_up_to_SA3.py  s2e_up_to_switchyard.py  s2e_up_to_switchyard_op_values_SASE1_rf_par.py  s2e_up_to_switchyard_op_values_SASE2_rf_par.py  s2e_up_to_switchyard_operational_values.py  test.p  x83_optics.ipynb
s2e_sections/: sections.py  sections2019.py  sections_special_lattice.py
search/: search_index.json
special-optics-files/: BC2_TDS_HIGH_ET_RES.txt
tests/: test_plot.py  test_sections.py  test_sequences.py  test_slicing.py  test_subsequences.py  test_writer.py
utils/: beam_matching.py
(+69 files in other folders)
